updated design for classic

--- a/docs/awesome_table_in_html.Rmd
+++ b/docs/awesome_table_in_html.Rmd
@@ -85,8 +85,8 @@ dt %>%
 
 ```{r}
 dt %>%
-  kbl() %>%
-  kable_classic()
+  kbl(caption = "Recreating booktabs style table") %>%
+  kable_classic(full_width = F, html_font = "Cambria")
 ```
 
 ```{r}
