--- a/docs/best_practice_for_newline_in_latex_table.Rmd
+++ b/docs/best_practice_for_newline_in_latex_table.Rmd
@@ -32,8 +32,8 @@ Wrapping texts and make newlines may seem to be the same but they are actaully q
 If you are only trying stop your texts from "overflowing", you can get it done by setting a fixed width with `kableExtra::column_spec`. This is the most recommanded practice as it's fairly straightforward. The column width controls the width for both table header and table body. 
 
 ```{r, warning=F, message=F}
-library(kableExtra); library(dplyr)
-dt <- tibble(
+library(kableExtra)
+dt <- data.frame(
   Items = c("Item 1", "Item 2", "Item 3"),
   Text_1 = c("Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vehicula tempor ex. Morbi malesuada sagittis turpis, at venenatis nisl luctus a. ","In eu urna at magna luctus rhoncus quis in nisl. Fusce in velit varius, posuere risus et, cursus augue. Duis eleifend aliquam ante, a aliquet ex tincidunt in. ", "Vivamus venenatis egestas eros ut tempus. Vivamus id est nisi. Aliquam molestie erat et sollicitudin venenatis. In ac lacus at velit scelerisque mattis. "),
   Text_2 = c("Duis posuere placerat magna, ac aliquam lorem viverra non. Ut ultrices tempus eros, quis sodales libero commodo non. In non neque ut lacus vestibulum dictum a quis ipsum. ", "Aenean ut justo interdum, laoreet enim nec, viverra eros. Donec vel pharetra nunc. Suspendisse vel ipsum ac lectus semper aliquam ac a orci. Suspendisse libero mauris, egestas semper auctor sit amet, tempor et orci. ", "Phasellus quis neque aliquet, finibus nunc eget, lacinia neque. Sed auctor lectus vel ex scelerisque commodo. ")
@@ -53,15 +53,15 @@ In LaTeX, to make linebreaks in table cells, people usually use the `makecell` p
 linebreak("a\nb")
 ```
 
-When you have `\n` in your data frame, you can either change the value manually or simply use it with `dplyr::mutate_all`. 
+When you have `\n` in your data frame, you can either change the value manually or simply use it with  `mutate_all`. 
 ```{r}
 dt2 <- data.frame(
   Item = c("Hello\nWorld", "This\nis a cat"), 
   Value = c(10, 100)
-)
+) 
+dt2$Item <- linebreak(dt2$Item)
 
 dt2 %>%
-  mutate_all(linebreak) %>%
   kable("latex", booktabs = T, escape = F,
         caption = "Main Title\\\\Subtitle",
         col.names = linebreak(c("Item\n(Name)", "Value\n(Number)"), align = "c"))
@@ -79,7 +79,6 @@ If you have a need to put a linebreak in `kableExtra` functions such as `add_hea
 
 ```{r}
 dt2 %>%
-  mutate_all(linebreak) %>%
   kable("latex", booktabs = T, escape = F,
         col.names = linebreak(c("Item\n(Name)", "Value\n(Number)"), align = "c")) %>%
   add_header_above(c("Combined\nTitle" = 2)) %>%
